Favorite/unfavorite articles

--- a/RealWorldFSharp.Api/TODO.txt
+++ b/RealWorldFSharp.Api/TODO.txt
@@ -1,9 +1,7 @@
 - Features
-    - list tags
     - list articles (with query params)
     - feed articles
-    - favorite article
-    - un-favorite article
 
 - Improve
-    
+    - update article does not account for user
+    - foreign keys
