Start using read models

--- a/RealWorldFSharp.Api/TODO.txt
+++ b/RealWorldFSharp.Api/TODO.txt
@@ -3,5 +3,6 @@
     - feed articles
 
 - Improve
+    - use read model for article responses
     - update article does not account for user
     - foreign keys
