Complete read models with sql provider

--- a/RealWorldFSharp.Api/TODO.txt
+++ b/RealWorldFSharp.Api/TODO.txt
@@ -1,5 +1,5 @@
 - Features
-    - list articles (with query params)
     - feed articles
 
 - Improve
+    - cascade deletes (articles with comments, for ex)
